added news detail

--- a/KoloLos/KoloLos.csproj
+++ b/KoloLos/KoloLos.csproj
@@ -170,6 +170,7 @@
     </Compile>
     <Compile Include="Models\Abstract.cs" />
     <Compile Include="Models\HomeModel.cs" />
+    <Compile Include="Models\NewsDetail.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
