--- a/KoloLos/KoloLos.csproj
+++ b/KoloLos/KoloLos.csproj
@@ -283,6 +283,7 @@
     <Content Include="Views\Web.config" />
     <Content Include="Views\Main\Index.cshtml" />
     <Content Include="Views\News\Details.cshtml" />
+    <Content Include="Views\News\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
