--- a/KoloLos/KoloLos.csproj
+++ b/KoloLos/KoloLos.csproj
@@ -168,7 +168,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\Abstract.cs" />
+    <Compile Include="Models\ArticleAbstract.cs" />
     <Compile Include="Models\HomeModel.cs" />
     <Compile Include="Models\NewsDetail.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
