--- a/KoloLosCommon/KoloLosCommon.csproj
+++ b/KoloLosCommon/KoloLosCommon.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{AAF16FFD-505E-47D8-82AF-35FB13F650AC}</ProjectGuid>
+    <ProjectGuid>{33995842-E41A-4182-9807-726F367844D9}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>KoloLosLogic</RootNamespace>
-    <AssemblyName>KoloLosLogic</AssemblyName>
+    <RootNamespace>KoloLosCommon</RootNamespace>
+    <AssemblyName>KoloLosCommon</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,9 +30,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="EntityFramework">
-      <HintPath>..\packages\EntityFramework.5.0.0\lib\net45\EntityFramework.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
