--- a/KoloLos/packages.config
+++ b/KoloLos/packages.config
@@ -3,6 +3,9 @@
   <package id="Autofac" version="3.0.2" targetFramework="net45" />
   <package id="Autofac.Mvc4" version="3.0.0" targetFramework="net45" />
   <package id="EntityFramework" version="5.0.0" targetFramework="net45" />
+  <package id="Glimpse" version="1.4.1" targetFramework="net45" />
+  <package id="Glimpse.AspNet" version="1.3.0" targetFramework="net45" />
+  <package id="Glimpse.Mvc4" version="1.3.1" targetFramework="net45" />
   <package id="jQuery" version="1.8.2" targetFramework="net45" />
   <package id="jQuery.UI.Combined" version="1.8.24" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.10.0" targetFramework="net45" />
