--- a/KoloLos/KoloLos.csproj
+++ b/KoloLos/KoloLos.csproj
@@ -174,6 +174,9 @@
     <Compile Include="Controllers\ArticleController.cs" />
     <Compile Include="Controllers\ListOfArticlesController.cs" />
     <Compile Include="Controllers\MainController.cs" />
+    <Compile Include="Controllers\ManagerController.cs" />
+    <Compile Include="Controllers\SampleController.cs" />
+    <Compile Include="Controllers\SampleEfController.cs" />
     <Compile Include="GlimpseSecurityPolicy.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -294,6 +297,12 @@
     <Content Include="Views\Shared\SingleColumnLayout.cshtml" />
     <Content Include="Views\ListOfArticles\Index.cshtml" />
     <Content Include="Views\Article\Index.cshtml" />
+    <Content Include="Views\Manager\Index.cshtml" />
+    <Content Include="Views\SampleEf\Index.cshtml" />
+    <Content Include="Views\SampleEf\Details.cshtml" />
+    <Content Include="Views\SampleEf\Create.cshtml" />
+    <Content Include="Views\SampleEf\Edit.cshtml" />
+    <Content Include="Views\SampleEf\Delete.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
