--- a/KoloLos/KoloLos.csproj
+++ b/KoloLos/KoloLos.csproj
@@ -174,6 +174,7 @@
     <Compile Include="Controllers\ArticleController.cs" />
     <Compile Include="Controllers\GalleryController.cs" />
     <Compile Include="Models\GalleryManager\GalleryDelete.cs" />
+    <Compile Include="Models\GalleryManager\ImageNormalizer.cs" />
     <Compile Include="Models\GalleryManager\ImageRemover.cs" />
     <Compile Include="Models\GalleryManager\GalleryImageDetails.cs" />
     <Compile Include="Controllers\GalleryManagerController.cs" />
@@ -188,6 +189,7 @@
     <Compile Include="Models\GalleryManager\GalleryEdit.cs" />
     <Compile Include="Models\GalleryManager\GalleryFolder.cs" />
     <Compile Include="Models\GalleryManager\GalleryNew.cs" />
+    <Compile Include="Models\GalleryManager\ImageResizer.cs" />
     <Compile Include="Models\GalleryManager\ImageThumbnail.cs" />
     <Compile Include="Models\Gallery\FolderResolver.cs" />
     <Compile Include="Models\Gallery\Galleries.cs" />
