--- a/KoloLos/Web.config
+++ b/KoloLos/Web.config
@@ -12,7 +12,7 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   <section name="glimpse" type="Glimpse.Core.Configuration.Section, Glimpse.Core" /></configSections>
   <connectionStrings>
-    <add name="KoloLos" connectionString="Server=(localdb)\v11.0;Database=KoloLos;Integrated Security=true;" providerName="System.Data.SqlClient" />
+    <add name="KoloLos" connectionString="Server=(localdb)\projects;Database=KoloLos;Integrated Security=true;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
